updated title and trans

--- a/Storage-Tank.html
+++ b/Storage-Tank.html
@@ -573,6 +573,11 @@
             duration: 1200,
         })
     </script>
+<!-- transalator -->
+<div class="gtranslate_wrapper"></div>
+<script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"detect_browser_language":true,"languages":["en","nl"],"wrapper_selector":".gtranslate_wrapper","flag_style":"3d","alt_flags":{"en":"usa"}}</script>
+<script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
+
 </body>
 
 </html>
