--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <meta name="keywords" content="degier, degier engineering,html">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Degier Engineering</title>
+        <title>De Gier Engineering B.V.</title>
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
         <link type="text/css" href="https://fonts.google.com/specimen/Open+Sans?query=sans">
@@ -593,5 +593,6 @@ duration: 1200,
 <div class="gtranslate_wrapper"></div>
 <script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"detect_browser_language":true,"languages":["en","nl"],"wrapper_selector":".gtranslate_wrapper","flag_style":"3d","alt_flags":{"en":"usa"}}</script>
 <script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
+
 </body>
 </html>
