--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                                 </li>
                                 <li><a href="#storage">Storage Tanks</a>
                             </li>
+                            <li><a href="cad-server.html">CADServer</a></li>
                             <li><a href="#contact">Contact</a></li>
                         </ul>
                     </nav>
