added cadserver changes

--- a/computer-aided.html
+++ b/computer-aided.html
@@ -84,6 +84,9 @@
                                 <li class="active"><a href="Storage-Tank.html">Storage Tanks</a>
 
                                 </li>
+                                
+                                <li><a href="cad-server.html">CADServer</a></li>
+
 
                                 <li><a href="/#contact">Contact</a></li>
                             </ul>
