--- a/engineering-design.html
+++ b/engineering-design.html
@@ -85,6 +85,10 @@
 
                                 </li>
 
+                                <li><a href="cad-server.html">CADServer</a></li>
+
+
+
                                 <li><a href="/#contact">Contact</a></li>
                             </ul>
                         </nav>
