--- a/product-design.html
+++ b/product-design.html
@@ -81,6 +81,10 @@
                                         <li><a href="Reverse-Engineering.html">Reverse Engineering</a></li>
                                     </ul>
                                 </li>
+
+                                <li><a href="cad-server.html">CADServer</a></li>
+
+                                
                                 <li class="active"><a href="Storage-Tank.html">Storage Tanks</a>
 
                                 </li>
