--- a/engineering-design.html
+++ b/engineering-design.html
@@ -72,7 +72,7 @@
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <!-- <li><a href="#about">About</a></li> -->
-                                <li><a href="#">Services</a>
+                                <li class="active"><a href="#">Services</a>
                                     <ul class="dropdown">
                                         <li><a href="product-design.html">Product Design And Development</a></li>
                                         <li><a href="engineering-design.html">Engineering Design and Detailing</a></li>
@@ -81,13 +81,11 @@
                                         <li><a href="Reverse-Engineering.html">Reverse Engineering</a></li>
                                     </ul>
                                 </li>
-                                <li class="active"><a href="Storage-Tank.html">Storage Tanks</a>
+                                <li><a href="Storage-Tank.html">Storage Tanks</a>
 
                                 </li>
 
                                 <li><a href="cad-server.html">CADServer</a></li>
-
-
 
                                 <li><a href="/#contact">Contact</a></li>
                             </ul>
