--- a/product-design.html
+++ b/product-design.html
@@ -72,7 +72,7 @@
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <!-- <li><a href="#about">About</a></li> -->
-                                <li><a href="#">Services</a>
+                                <li class="active"><a href="#">Services</a>
                                     <ul class="dropdown">
                                         <li><a href="product-design.html">Product Design And Development</a></li>
                                         <li><a href="engineering-design.html">Engineering Design and Detailing</a></li>
@@ -85,7 +85,7 @@
                                 <li><a href="cad-server.html">CADServer</a></li>
 
                                 
-                                <li class="active"><a href="Storage-Tank.html">Storage Tanks</a>
+                                <li><a href="Storage-Tank.html">Storage Tanks</a>
 
                                 </li>
 
