--- a/Reverse-Engineering.html
+++ b/Reverse-Engineering.html
@@ -85,6 +85,8 @@
                                 </li>
                                 <li><a href="cad-server.html">CADServer</a></li>
 
+                                <li><a href="MyCadShop.com.html">MyCadShop.com</a></li>
+
                                 <li><a href="/#contact">Contact</a></li>
                             </ul>
                         </nav>
