--- a/computer-aided.html
+++ b/computer-aided.html
@@ -87,6 +87,7 @@
                                 
                                 <li><a href="cad-server.html">CADServer</a></li>
 
+                                <li><a href="MyCadShop.com.html">MyCadShop.com</a></li>
 
                                 <li><a href="/#contact">Contact</a></li>
                             </ul>
