--- a/product-design.html
+++ b/product-design.html
@@ -88,7 +88,7 @@
                                 <li><a href="Storage-Tank.html">Storage Tanks</a>
 
                                 </li>
-
+                                <li><a href="MyCadShop.com.html">MyCadShop.com</a></li>
                                 <li><a href="#contact">Contact</a></li>
                             </ul>
                         </nav>
