--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                                 <li><a href="#storage">Storage Tanks</a>
                             </li>
                             <li><a href="cad-server.html">CADServer</a></li>
+                            <li><a href="MyCadShop.com.html">MyCadShop.com</a></li>
                             <li><a href="#contact">Contact</a></li>
                         </ul>
                     </nav>
