--- a/MyCadShop.com.html
+++ b/MyCadShop.com.html
@@ -108,7 +108,7 @@ background-size: contain;">
 <div class="row">
     <div class="col-lg-12 text-center">
         <div class="breadcrumb__text">
-            <h2>MyCadShop.com</h2>
+            <h2><a style="color: white;" href="https://mycadshop.com">MyCadShop.com</a></h2>
         </div>
     </div>
 </div>
@@ -120,6 +120,7 @@ background-size: contain;">
 <div class="row">
     <div class="col-lg-6">
         <div class="about__pic">
+
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 first-img">
                     </br>
@@ -127,9 +128,12 @@ background-size: contain;">
                     </br>
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
+                           <a href="https://mycadshop.com"> 
                             <div class="carousel-item active">
                                 <img src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/mycadshope/mycadshop_zb7POQ6IN.png" class="img-fluid" alt="Responsive image">
                             </div>
+                        </a>
+
                         </div>
                     </div>
                 </div>
@@ -139,22 +143,22 @@ background-size: contain;">
     <div class="col-lg-6">
         <div class="about__text" data-aos="fade-down">
             <div class="section-title">
-                <span class="sect-spn">MyCadShop.com</span>
+                <span class="sect-spn"><a style="color:black;" href="https://mycadshop.com">MyCadShop.com</a></span>
             </div>
             <div class="about__text__desc">
-                <p class="text__desc__p">Welcome to MyCADShop.com, presented by De Gier Engineering - your destination for high quality technical drawings, 3D models and calculations. As a respected engineering company, we are proud to offer an extensive selection of resources to stimulate your creativity and promote innovation in your projects.</p>
-                <p class="text__desc__p">Why choose MyCADShop.com from De Gier Engineering?</p>
+                <p class="text__desc__p">Welcome to <a style="color:black;" href="https://mycadshop.com">MyCADShop.com</a>, presented by De Gier Engineering - your destination for high quality technical drawings, 3D models and calculations. As a respected engineering company, we are proud to offer an extensive selection of resources to stimulate your creativity and promote innovation in your projects.</p>
+                <p class="text__desc__p">Why choose <a style="color:black;" href="https://mycadshop.com">MyCADShop.com</a> from De Gier Engineering?</p>
                 <p class="text__desc__p">1. Unparalleled Expertise: With our experience in the engineering industry, we carefully select the best CAD files and calculations, which can be seamlessly integrated into your projects.</p>
-                <p class="text__desc__p">2. Extensive Library: Our partnership with MyCADShop.com has resulted in an extensive library of technical drawings, 3D models and calculations for various disciplines and industries.</p>
+                <p class="text__desc__p">2. Extensive Library: Our partnership with <a style="color:black;" href="https://mycadshop.com">MyCADShop.com</a> has resulted in an extensive library of technical drawings, 3D models and calculations for various disciplines and industries.</p>
                 <p class="text__desc__p">3. Quality Assurance: All our CAD files and calculations are thoroughly checked to meet our standards.</p>
                 <p class="text__desc__p">4. Innovative Solutions: We keep abreast of technological developments and industry trends and regularly update our offer.</p>
             </p>
-            <p class="text__desc__p">5. Seamless Shopping Experience: MyCADShop.com offers a user-friendly platform with intuitive search and browsing functions.</p>
+            <p class="text__desc__p">5. Seamless Shopping Experience: <a style="color:black;" href="https://mycadshop.com">MyCADShop.com</a> offers a user-friendly platform with intuitive search and browsing functions.</p>
             <p class="text__desc__p">6. Dedicated Customer Service: We are always available to assist you with any questions or concerns.
             </p>
             <p class="text__desc__p">MyCADShop.com; Discover the potential of our high-quality technical drawings and 3D models.
             </p>
-            <p class="text__desc__p">Start exploring MyCADShop.com today! Have fun.
+            <p class="text__desc__p">Start exploring <a style="color:black;" href="https://mycadshop.com">MyCADShop.com</a> today! Have fun.
             </p>
         </div>
     </div>
