--- a/engineering-document.html
+++ b/engineering-document.html
@@ -84,6 +84,9 @@
 
                                 </li>
                                 <li><a href="cad-server.html">CADServer</a></li>
+                                
+                                <li><a href="MyCadShop.com.html">MyCadShop.com</a></li>
+
                                 <li><a href="/#contact">Contact</a></li>
                             </ul>
                         </nav>
